@@ -1,5 +1,5 @@
 /**
- * Copyright (C) Minimax Labs Ltd., 2010 - 2021
+ * Copyright (C) Minimax Labs Ltd., 2010 - 2022
  * All rights reserved.
  */
 package com.mmxlabs.models.lng.transformer.ui.analytics;
@@ -10,6 +10,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -338,8 +339,7 @@ public class SlotInsertionOptimiserUnit {
 								}
 
 								final IPortSlot followerSlot = portSlotProvider.getPortSlot(follower);
-								if (followerSlot instanceof IDischargeOption) {
-									final IDischargeOption dischargeOption = (IDischargeOption) followerSlot;
+								if (followerSlot instanceof IDischargeOption dischargeOption) {
 									final boolean isDESSale = dischargeOption instanceof IDischargeSlot;
 									if (isFOBPurchase && !isDESSale) {
 										nonShippedPairs.add(new Pair<>(element, follower));
@@ -360,8 +360,7 @@ public class SlotInsertionOptimiserUnit {
 									}
 								}
 								final IPortSlot precederSlot = portSlotProvider.getPortSlot(preceder);
-								if (precederSlot instanceof ILoadOption) {
-									final ILoadOption loadOption = (ILoadOption) precederSlot;
+								if (precederSlot instanceof ILoadOption loadOption) {
 									final boolean isFOBPurchase = loadOption instanceof ILoadSlot;
 									if (isFOBPurchase && !isDESSale) {
 										nonShippedPairs.add(new Pair<>(preceder, element));
@@ -541,7 +540,7 @@ public class SlotInsertionOptimiserUnit {
 					logger.beginStage(SlotInsertionOptimiserLogger.STAGE_PROCESS_SOLUTIONS);
 				}
 				// Reduce result to unique solutions
-				results = results.parallelStream().distinct().collect(Collectors.toList());
+				results = results.stream().distinct().toList();
 
 				final int maxSize = 300;
 				final List<NonNullPair<ISequences, Map<String, Object>>> solutions;
@@ -573,7 +572,7 @@ public class SlotInsertionOptimiserUnit {
 								checker.init(initialSimilarityState, thisSimilarityState, state.originalRawSequences);
 								record.complexity = checker.getFullDifferences().size();
 								return record;
-							}));
+							}, LinkedHashMap::new, Collectors.toList()));
 					// ,
 
 					// Sort
@@ -597,7 +596,7 @@ public class SlotInsertionOptimiserUnit {
 						while (itr.hasNext()) {
 							final List<Pair<ISequences, Long>> l = itr.next().getValue();
 							if (!l.isEmpty()) {
-								solutions.add(new NonNullPair<ISequences, Map<String, Object>>(l.remove(0).getFirst(), new HashMap<>()));
+								solutions.add(new NonNullPair<>(l.remove(0).getFirst(), new HashMap<>()));
 								if (solutions.size() == maxSize) {
 									break;
 								}
@@ -642,7 +641,6 @@ public class SlotInsertionOptimiserUnit {
 			} finally {
 				monitor.done();
 				if (logger != null) {
-
 					logger.done();
 				}
 			}
@@ -650,8 +648,8 @@ public class SlotInsertionOptimiserUnit {
 	}
 
 	private static class Record {
-		int complexity;
-		List<ISequenceElement> linkedTo = new LinkedList<>();
+		private int complexity;
+		private List<ISequenceElement> linkedTo = new LinkedList<>();
 
 		@Override
 		public int hashCode() {
@@ -663,8 +661,7 @@ public class SlotInsertionOptimiserUnit {
 			if (obj == this) {
 				return true;
 			}
-			if (obj instanceof Record) {
-				final Record other = (Record) obj;
+			if (obj instanceof Record other) {
 				return complexity == other.complexity //
 						&& linkedTo.equals(other.linkedTo) //
 				;
